Add FeNewsInformation Model

--- a/upload/catalog/view/theme/default/template/extension/module/fe_news.twig
+++ b/upload/catalog/view/theme/default/template/extension/module/fe_news.twig
@@ -1,1 +1,7 @@
-THIS IS A TEST
+<ul>
+    {% for information in informations %}
+        <li>
+        {{ information.title }}
+        </li>
+    {% endfor %}
+</ul>
