Add news list page

--- a/upload/catalog/view/theme/default/template/extension/module/fe_news.twig
+++ b/upload/catalog/view/theme/default/template/extension/module/fe_news.twig
@@ -1,7 +1,19 @@
-<ul>
-    {% for information in informations %}
-        <li>
-        {{ information.title }}
-        </li>
-    {% endfor %}
-</ul>
+{{ header }}
+
+<main style="min-height: 75vh;">
+    <div class="container">
+        {% for information in informations %}
+            <div class="card my-2">
+                <div class="card-header">{{ information.title }}</div>
+                <div class="card-body">
+                    {{ information.description|striptags|slice(0, 100) }}
+                </div>
+                <div class="card-footer">
+                    <a href="{{ link_information }}{{ information.information_id }}">Открыть</a>
+                </div>
+            </div>
+        {% endfor %}
+    </div>
+</main>
+
+{{ footer }}
